<resources>
    <string name="app_name">Needs</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter item</string>
    <string name="hint_item">Enter item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_color">Colour</string>
    <string name="hint_size">Size</string>
    <string name="save_button">Save</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_button">NO</string>
    <string name="yes_button">YES</string>
    <string name="edit_time">Edit item</string>
    <string name="update">Update</string>

</resources>
